--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-API_URL='https://globa-ledger.vercel.app'
+API_URL='http://localhost:3000'
 PGHOST='ep-winter-wave-a46sqwd2.us-east-1.aws.neon.tech'
 PGDATABASE='GlobaLedger'
 PGUSER='GlobaLedger_owner' 
